Added Add/Remove role to user